--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "redux-thunk": "2.3.0",
     "typescript": "^4.1.2",
     "word-wrap": "^1.2.4",
+    "yarn": "^1.22.22",
     "yjs": "13.5.22"
   },
   "scripts": {
